--- a/src/components/authentication/SignIn.css
+++ b/src/components/authentication/SignIn.css
@@ -1,6 +1,8 @@
 .sign-in__form {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    flex-wrap: wrap;
     padding-right: 1rem;
 }
 
