--- a/src/components/authentication/SignUp.css
+++ b/src/components/authentication/SignUp.css
@@ -1,7 +1,7 @@
 .sign-up__form {
-    max-width: 640px;
-    margin: 0 auto;
-
+    flex: 1;
+    padding: 2rem;
+    min-width: 420px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
