--- a/src/components/question/QuestionEntry.css
+++ b/src/components/question/QuestionEntry.css
@@ -1,4 +1,7 @@
 .question-entry__form {
+    flex: 1;
+    padding: 2rem;
+
     display: flex;
     flex-direction: column;
     align-items: stretch;
