--- a/src/components/question/QuestionList.css
+++ b/src/components/question/QuestionList.css
@@ -1,6 +1,7 @@
 .question-list {
-    max-width: 640px;
-    margin: 0 auto;
+    flex: 1;
+    padding: 2rem;
+    min-width: 420px;
 
     display: flex;
     flex-direction: column;
